[package]
name = "manual_rustls_minimal_repro"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum               = "0.8.1"
axum-extra         = "0.10.0"
eyre               = "0.6.12"
hyper              = { version = "1.3.1", features = ["http1", "http2", "server"] }
hyper-util         = { version = "0.1.5", features = ["server-auto"] }
rustls             = "0.23.5"
tokio              = { version = "1", features = ["full"] }
tokio-rustls       = "0.26.0"
tower              = "0.5.0"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }